# cpp_papers

./: .gitignore  .gitmodules  LICENSE.TXT  P2483R0.html  P2483R0.md  README.md  any_view.md  atomic.md  concat.lwg.feedback.20230906.md  concat.lwg.feedback.20230913.md  concat.lwg.feedback.20240320.md  concat.lwg.feedback.md  concat.md  flat_map.md  ref_wrapper_common_ref.md  single_view.md  string_literal.md  zip.md
.github/workflows/: main.yml
impl/: CMakeLists.txt  _clang-format
impl/any_view/: any_view.hpp  any_view_te.hpp  any_view_virtual.hpp  reserve_hint.hpp  storage.hpp  type_traits.hpp
impl/any_view/benchmark/: algo.cpp  algo.hpp  algo_bench.cpp  micro.cpp  pipeline.cpp  widget.cpp  widget.hpp
impl/any_view/test/: helper.hpp
impl/any_view/test/iterator/: bidirectional.cpp  contiguous.cpp  exception.cpp  forward.cpp  input.cpp  input_common.cpp  random_access.cpp
impl/any_view/test/storage/: exception.cpp  storage.cpp
impl/any_view/test/view/: bidirectional.cpp  borrowed.cpp  contiguous.cpp  conversion.cpp  copy.cpp  default.cpp  element.cpp  forward.cpp  general.cpp  input.cpp  moved_from.cpp  random_access.cpp  reserve_hint.cpp  size.cpp  view_interface.cpp  viewable_range.cpp
impl/concat/: concat.hpp  utils.hpp
impl/concat/test/: basics.cpp  concat_with_refwrap_common.cpp  concatrv3-test.cpp  example.cpp  issues.cpp  itermoveswap.cpp  proxy-deref.cpp  range_fixtures.cpp  range_fixtures.hpp  std_exposition_only_concepts.hpp  xvalue_prvalue.cpp
impl/ref_wrapper/: ref_wrapper.hpp
impl/ref_wrapper/test/: basic.cpp  cross.cpp  happy.cpp  levent.cpp  sad.cpp  testutil.hpp
release/: P2542R0.html  ref_wrapper_common_ref_82e7038.html
